iRedMail-0.9.0:
    * Works on new Linux/BSD distribution releases:
        - Ubuntu 14.04 LTS

    * Drop support for below releases:
        - Ubuntu 13.04, 13.10

    * Allows sasl authentication ONLY over a TLS-encrypted smtp connection.
    * Enable LMTP service in Dovecot by default.
      To use LMTP instead of Dovecot LDA as per-domain or per-user local
      deliver agent in Postfix, you need to use one of below:
        - LMTP socket: lmtp:unix:private/dovecot-lmtp
        - LMTP inet listener: lmtp:inet:127.0.0.1:24

    * Removed columns for MySQL and PostgreSQL backends:
        - domain.defaultlanguage
        - domain.defaultuserquota
        - domain.defaultuseraliases
        - domain.disableddomainprofiles
        - domain.disableduserprofiles
        - domain.defaultpasswordscheme
        - domain.minpasswordlength
        - domain.maxpasswordlength

      They all are merged into column 'domain.settings'. For example:
      domain.settings='default_language:en_US;default_user_quota:1024;'

      Please check iRedMail upgrade tutorial to migrate these columns:
      http://www.iredmail.org/wiki/index.php?title=Upgrade/iRedMail/0.8.6-0.8.7

    * New columns for MySQL and PostgreSQL backends:
        + mailbox.enablelmtp: used by Dovecot LMTP server.
        + domain.settings: used to store per-domain settings, userd in
          iRedAdmin-Pro.
        + mailbox.settings: used to store per-user settings, used in
          iRedAdmin-Pro.
        + admin.settings: used to store per-user settings, used in
          iRedAdmin-Pro.
        + alias.islist: used to mark a sql record is a mail list account.

    * New LDAP attribute/value pairs for mail users:
        + enabledService=lmtp: used by Dovecot LMTP server.

    * Fixed issues:
        + Postfix cannot resolve IP address under chroot on RHEL/CentOS.

    * Updated packages:
        + Roundcube webmail -> 1.0.0
        + phpMyAdmin -> 4.1.13

iRedMail-0.8.6: